overflow bug fix

--- a/style.css
+++ b/style.css
@@ -17,10 +17,14 @@ td{
 #display{
     text-align: right;
     width: 100%;
-    font-size: 2em;
+    /* font-size: clamp(1.5em, 5vw, 2.5em); */
+    font-size: 1.5em;
     color: #fff;
     background-color: #4e494d;
     border: 0px;
+    padding: 0.5em 1em;
+    box-sizing: border-box;
+    overflow-x: nowrap;
 }
 .digitButton{
     background-color: #807e80;
